Created Folders & Readmes

--- a/Centre-De-Tri/README
+++ b/Centre-De-Tri/README
@@ -1,1 +1,7 @@
-REDME
+README:
+
+History:
+Created: Lyam 08-11-2022.
+
+Description:
+Dans ce répertoire, on trouve tout les projets de programmes ainsi que la documentation généré automatiquement pour le centre de tri.
