--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-//README
+README:
+
+History:
+Created: Lyam 08-11-2022.
+
+Description:
+Dans ce répertoire, on trouve tout les codes et documentations généré automatiquement pour chacune des quatres parties du projets
