--- a/Poste-De-Commande/README
+++ b/Poste-De-Commande/README
@@ -1,1 +1,7 @@
-README
+README:
+
+History:
+Created: Lyam 08-11-2022.
+
+Description:
+Dans ce répertoire, on trouve tout les projets de codes ainsi que la documentation générée automatiquement pour le Poste de commande.
