Modification du ReadMe

--- a/Centre-De-Pesage/README
+++ b/Centre-De-Pesage/README
@@ -2,6 +2,9 @@ README:
 
 History:
 Created: Lyam 08-11-2022.
+Branched: Camille 11-11-2022.
 
 Description:
 Dans ce répertoire, on trouve tout les projets de programmes ainsi que la documentation généré automatiquement pour le centre de pesage.
+
+
