Created Library folder & started ServiceCommunic

--- a/README
+++ b/README
@@ -4,4 +4,4 @@ History:
 Created: Lyam 08-11-2022.
 
 Description:
-Dans ce répertoire, on trouve tout les codes et documentations généré automatiquement pour chacune des quatres parties du projets
+Dans ce répertoire, on trouve tout les codes et documentations générés automatiquement pour chacune des quatres parties du projets
