Updaté le readme et deleté des folders

--- a/Centre-De-Tri/Programmes/STM32/README
+++ b/Centre-De-Tri/Programmes/STM32/README
@@ -1,7 +1,7 @@
 README:
 
 History:
-Created: Lyam 08-11-2022.
+Created: Pinox64 2022-11-17.
 
 Description:
-Dans ce répertoire ce trouve tous les projets IARs et CubeMX nécessaire au centre de tri.
+Dans ce répertoire ce trouvent tous les projets IARs et CubeMX nécessaires au centre de tri.
