beagleBoneBruh still giving issues.

--- a/Poste-De-Commande/Programmes/PC/CommandCenter/Properties/Resources.resx
+++ b/Poste-De-Commande/Programmes/PC/CommandCenter/Properties/Resources.resx
@@ -166,6 +166,36 @@
   <data name="Calibration_Warning_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Applications\Modes\Calibration\Calibration_Warning_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CheckBox_Available_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Available_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CheckBox_Available_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Available_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CheckBox_Disabled_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Disabled_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CheckBox_Disabled_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Disabled_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CheckBox_Error_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Error_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CheckBox_Error_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Error_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CheckBox_Inactive_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Inactive_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CheckBox_Inactive_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Inactive_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CheckBox_Warning_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Warning_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CheckBox_Warning_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Selection\CheckBox\CheckBox_Warning_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CheckMark_Available_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Selection\Check\CheckMark_Available_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
