--- a/Poste-De-Commande/Programmes/PC/CommandCenter/Properties/Resources.resx
+++ b/Poste-De-Commande/Programmes/PC/CommandCenter/Properties/Resources.resx
@@ -325,6 +325,60 @@
   <data name="Operation_Warning_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Applications\Modes\Operation\Operation_Warning_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Paused_Available_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Modes\Pause\Paused_Available_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Paused_Available_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Modes\Pause\Paused_Available_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Paused_Disabled_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Modes\Pause\Paused_Disabled_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Paused_Disabled_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Modes\Pause\Paused_Disabled_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Paused_Error_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Modes\Pause\Paused_Error_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Paused_Error_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Modes\Pause\Paused_Error_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Paused_Warning_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Modes\Pause\Paused_Warning_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Paused_Warning_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Modes\Pause\Paused_Warning_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Available_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Available_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Available_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Available_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Disabled_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Disabled_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Disabled_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Disabled_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Error_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Error_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Error_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Error_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Inactive_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Inactive_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Inactive_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Inactive_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Warning_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Warning_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Play_Warning_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Applications\Play\Play_Warning_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="PowerButton_Active_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Generic\Power\PowerButton_Active_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -502,6 +556,12 @@
   <data name="Vehicle_Warning_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Applications\Devices\Vehicle\Vehicle_Warning_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Warning_Available_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Generic\Warning\Warning_Available_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Warning_Available_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Generic\Warning\Warning_Available_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Warning_Disabled_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Generic\Warning\Warning_Disabled_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -513,6 +573,12 @@
   </data>
   <data name="Warning_Error_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Generic\Warning\Warning_Error_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Warning_Inactive_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Generic\Warning\Warning_Inactive_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Warning_Inactive_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Generic\Warning\Warning_Inactive_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Warning_Warning_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Generic\Warning\Warning_Warning_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
