--- a/Poste-De-Commande/Programmes/PC/CommandCenter/Properties/Resources.resx
+++ b/Poste-De-Commande/Programmes/PC/CommandCenter/Properties/Resources.resx
@@ -403,6 +403,36 @@
   <data name="PowerButton_Warning_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Generic\Power\PowerButton_Warning_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Save_Active_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Active_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_Active_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Active_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_Disabled_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Disabled_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_Disabled_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Disabled_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_Error_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Error_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_Error_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Error_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_Inactive_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Inactive_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_Inactive_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Inactive_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_Warning_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Warning_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_Warning_Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\Saving\Save_Warning_Filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Settings_Available_Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\Applications\Settings\Settings_Available_Empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
